--- a/org.eclipse.birt.report.extension.barcode/plugin.xml
+++ b/org.eclipse.birt.report.extension.barcode/plugin.xml
@@ -17,16 +17,16 @@
       <outline
             icon="resources/barcode.png"></outline>
       <builder
-            class="org.eclipse.birt.barcode.BarCodeBuilder">
+            class="org.eclipse.birt.report.extension.barcode.BarCodeBuilder">
       </builder>
       <reportItemFigureUI
-            class="org.eclipse.birt.barcode.BarCodeFigureUI">
+            class="org.eclipse.birt.report.extension.barcode.BarCodeFigureUI">
       </reportItemFigureUI>
    </extension>
    <extension
          point="org.eclipse.birt.report.model.reportItemModel">
       <reportItem
-            class="org.eclipse.birt.barcode.BarCodeItemFactory"
+            class="org.eclipse.birt.report.extension.barcode.BarCodeItemFactory"
             extendsFrom="ExtendedItem"
             extensionName="BarCode"
             hasStyle="true"
@@ -55,7 +55,7 @@
    <extension
          point="org.eclipse.birt.report.engine.reportitemPresentation">
       <reportItem
-            class="org.eclipse.birt.barcode.BarCodePresentationImpl"
+            class="org.eclipse.birt.report.extension.barcode.BarCodePresentationImpl"
             name="BarCode">
       </reportItem>
    </extension>
@@ -64,7 +64,7 @@
       <adaptable
             class="org.eclipse.birt.report.model.api.ExtendedItemHandle">
          <adapter
-               factory="org.eclipse.birt.barcode.views.BarCodePageGeneratorFactory"
+               factory="org.eclipse.birt.report.extension.barcode.views.BarCodePageGeneratorFactory"
                id="ReportDesign.AttributeView.BarCodePageGenerator"
                singleton="false"
                type="org.eclipse.birt.report.designer.ui.views.IPageGenerator">
