Added Barcode Draw Function

--- a/org.eclipse.birt.report.extension.barcode/build.properties
+++ b/org.eclipse.birt.report.extension.barcode/build.properties
@@ -2,4 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               lib/,\
+               lib/barcode4j.jar
+source.. = src/
