--- a/org.eclipse.birt.report.extension.barcode/.classpath
+++ b/org.eclipse.birt.report.extension.barcode/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="lib" path="lib/barcode4j.jar" sourcepath="C:/Documents and Settings/Marco/Documenti/Downloads/barcode4j-2.1.0-src.zip"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="output" path="bin"/>
