--- a/org.eclipse.birt.report.extension.barcode/plugin.xml
+++ b/org.eclipse.birt.report.extension.barcode/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.birt.report.designer.ui.reportitemUI">
       <model
-            extensionName="BarCode">
+            extensionName="%extension.name">
       </model>
       <palette
             icon="resources/barcode.png"></palette>
@@ -28,7 +28,7 @@
       <reportItem
             class="org.eclipse.birt.report.extension.barcode.BarCodeItemFactory"
             extendsFrom="ExtendedItem"
-            extensionName="BarCode"
+            extensionName="%extension.name"
             hasStyle="true"
             isNameRequired="false">
          <property
@@ -55,7 +55,7 @@
          point="org.eclipse.birt.report.engine.reportitemPresentation">
       <reportItem
             class="org.eclipse.birt.report.extension.barcode.BarCodePresentationImpl"
-            name="BarCode">
+            name="%extension.name">
       </reportItem>
    </extension>
    <extension
@@ -71,7 +71,7 @@
                <test
                      forcePluginActivation="true"
                      property="ExtendItemHandle.extensionName"
-                     value="BarCode">
+                     value="%extension.name">
                </test>
             </enablement>
          </adapter>
