--- a/org.eclipse.birt.report.extension.barcode/build.properties
+++ b/org.eclipse.birt.report.extension.barcode/build.properties
@@ -4,5 +4,7 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                lib/,\
-               lib/barcode4j.jar
+               lib/barcode4j.jar,\
+               plugin.properties,\
+               resources/
 source.. = src/
