--- a/org.eclipse.birt.report.extension.barcode/plugin.xml
+++ b/org.eclipse.birt.report.extension.barcode/plugin.xml
@@ -32,20 +32,22 @@
             hasStyle="true"
             isNameRequired="false">
          <property
+               allowExpression="true"
                canInherit="true"
                hasOwnModel="true"
                isEncryptable="false"
                isList="false"
                name="barCodeType"
-               type="string">
+               type="expression">
          </property>
          <property
+               allowExpression="true"
                canInherit="true"
                hasOwnModel="true"
                isEncryptable="false"
                isList="false"
                name="barCode"
-               type="string">
+               type="expression">
          </property>
       </reportItem>
    </extension>
